--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,16 +51,26 @@
           </div>
         </div>
       <!-- CARD   -->
-        <div class="row row-cols-1 row-cols-md-3 g-4" style="padding-left: 6rem; margin-top: 100px; margin-bottom: 90px;">
-          <app-card></app-card>
-          <app-card></app-card>
-          <app-card></app-card>
-          <app-card></app-card>
-          <app-card></app-card>
-          <app-card></app-card>
-          <app-card></app-card>
-          <app-card></app-card>
+      <div class="row" style="margin-top: 5rem; margin-bottom: 5rem;">
+        <div class="col-lg-3">
+        <app-card></app-card>
         </div>
+        <div class="col-lg-3">
+         <app-card></app-card>
+        </div>
+        <div class="col-lg-3">
+         <app-card></app-card>
+        </div>
+        <div class="col-lg-3">
+          <app-card></app-card>
+          </div>
+          <div class="col-lg-3">
+           <app-card></app-card>
+          </div>
+          <div class="col-lg-3">
+           <app-card></app-card>
+          </div>
+      </div>
   
         <!-- Marketing messaging and featurettes
         ================================================== -->
