design card bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,6 +70,12 @@
           <div class="col-lg-3">
            <app-card></app-card>
           </div>
+          <div class="col-lg-3">
+            <app-card></app-card>
+           </div>
+           <div class="col-lg-3">
+            <app-card></app-card>
+           </div>
       </div>
   
         <!-- Marketing messaging and featurettes
