--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,159 @@
 
-<div class="card" style="width: 18rem;  margin-left: 60px;">
-  <img src="https://mdbcdn.b-cdn.net/img/new/standard/nature/182.webp" class="card-img-top" alt="Sunset Over the Sea"/>
-  <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+
+<div class="row row-cols-1 row-cols-md-3 g-5">
+  <div class="col">
+    <div class="card">
+      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" style="cursor:pointer" routerLink="/booking" class="card-img-top" alt="Hollywood Sign on The Hill"/>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This is a longer card with supporting text below as a natural lead-in to
+          additional content. This content is a little bit longer.
+        </p>
+
+        <div class="d-flex justify-content-between total font-weight-bold mt-4">
+          <span style="color:grey">
+            <b>EveryDay</b>
+          </span>
+          <span style="color:darkslategray">
+            _________
+          </span>
+          <span>
+            <span style="color:crimson;">
+              From
+            </span>
+          $7,197.00
+        </span>
+        </div>
+
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" style="cursor:pointer" routerLink="/booking" class="card-img-top" alt="Palm Springs Road"/>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This is a longer card with supporting text below as a natural lead-in to
+          additional content. This content is a little bit longer.
+        </p>
+        <div class="d-flex justify-content-between total font-weight-bold mt-4">
+          <span style="color:grey">
+            <b>EveryDay</b>
+          </span>
+          <span style="color:darkslategray">
+            _________
+          </span>
+          <span>
+            <span style="color:crimson;">
+              From
+            </span>
+          $7,197.00
+        </span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" style="cursor:pointer" routerLink="/booking" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <div class="d-flex justify-content-between total font-weight-bold mt-4">
+         <span style="color:grey">
+            <b>EveryDay</b>
+          </span>
+          <span style="color:darkslategray">
+            _________
+          </span>
+          <span>
+            <span style="color:crimson;">
+              From
+            </span>
+          $7,197.00
+        </span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" style="cursor:pointer" routerLink="/booking" class="card-img-top" alt="Skyscrapers"/>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This is a longer card with supporting text below as a natural lead-in to
+          additional content. This content is a little bit longer.
+        </p>
+        <div class="d-flex justify-content-between total font-weight-bold mt-4">
+         <span style="color:grey">
+            <b>EveryDay</b>
+          </span>
+          <span style="color:darkslategray">
+            _________
+          </span>
+          <span>
+            <span style="color:crimson;">
+              From
+            </span>
+          $7,197.00
+        </span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" style="cursor:pointer" routerLink="/booking" class="card-img-top" alt="Skyscrapers"/>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This is a longer card with supporting text below as a natural lead-in to
+          additional content. This content is a little bit longer.
+        </p>
+        <div class="d-flex justify-content-between total font-weight-bold mt-4">
+         <span style="color:grey">
+            <b>EveryDay</b>
+          </span>
+          <span style="color:darkslategray">
+            _________
+          </span>
+          <span>
+            <span style="color:crimson;">
+              From
+            </span>
+          $7,197.00
+        </span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" style="cursor:pointer" routerLink="/booking" class="card-img-top" alt="Skyscrapers"/>
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          This is a longer card with supporting text below as a natural lead-in to
+          additional content. This content is a little bit longer.
+        </p>
+        <div class="d-flex justify-content-between total font-weight-bold mt-4">
+         <span style="color:grey">
+            <b>EveryDay</b>
+          </span>
+          <span style="color:darkslategray">
+            _________
+          </span>
+          <span>
+            <span style="color:crimson;">
+              From
+            </span>
+          $7,197.00
+        </span>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
