--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,31 +15,7 @@
       <body>
        
     
-        <header>
-          <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <img src="" alt="">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav mr-auto" style="padding-left: 400px;">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#" style="padding-left: 50px;">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="padding-left: 50px;">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#" style="padding-left: 50px;">Agent Login</a>
-                </li>
-              </ul>
-              <form class="form-inline mt-2 mt-md-0">
-                <a href="" style="margin-right: 50px; " >sign up</a>
-                <a href="">Login</a>
-              </form>
-            </div>
-          </nav>
-        </header>
+        <app-header></app-header>
     
         <main role="main">
     
@@ -124,6 +100,5 @@
           <!-- FOOTER -->
           <app-footer></app-footer>
         </main>
-      </body>
   
   
