--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,7 +10,7 @@
             <a class="nav-link" routerLink="/" style="padding-left: 50px;">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" style="padding-left: 50px;">Contact Us</a>
+            <a class="nav-link" routerLink="/" style="padding-left: 50px;">Contact Us</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
