--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,15 +8,24 @@
             <div class="card-body p-5 text-center">
   
               <h3 class="mb-5">Sign in</h3>
-              <form name="myForm">
+              <form #useForm="ngForm" name="myForm" (ngSubmit)="onSubmit()" >
               <div class="form-outline mb-4">
                 <label class="form-label" for="typeEmailX-2">Email</label>
-                <input type="email" name="email"  id="typeEmailX-2"  class="form-control form-control-lg"/>
+                <input type="email" name="email"
+                 #email="ngModel" [class.is-invalid] = "email.invalid && email.touched"
+                 id="typeEmailX-2" [(ngModel)]="loginModel.email" email="true" class="form-control form-control-lg"
+                 autocomplete="off"
+                  required/>
+                 <small [class.d-none]="email.valid || email.untouched" >Please enter valid email</small>
               </div>
   
               <div class="form-outline mb-4">
-                <label class="form-label" for="typePasswordX-2">Password</label>
-                <input type="password" name="password"  id="typePasswordX-2" class="form-control form-control-lg" required/>
+                <label class="form-label"  for="typePasswordX-2">Password</label>
+                <input type="password" name="password"
+                 #password="ngModel" [(ngModel)]="loginModel.password" [class.is-invalid] = "password.invalid && password.touched"
+                 autocomplete="off"
+                 id="typePasswordX-2" class="form-control form-control-lg" required/>
+                 <small [class.d-none]="password.valid || password.untouched" >Password is Required</small>
               </div>
   
               <!-- Checkbox -->
@@ -24,7 +33,7 @@
                 <input class="form-check-input" type="checkbox" value="" id="form1Example3"/>
                 <label class="form-check-label" for="form1Example3"> Remember password </label>
               </div>
-              <button class="btn btn-outline-dark" routerLink="/" type="submit">Login</button>
+              <button [disabled]="useForm.form.invalid" class="btn btn-outline-dark"  type="submit">Sign In</button>
             </form>
             </div>
           </div>
