--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -11,8 +11,8 @@
               <form  name="myForm">
               
              <div class="form-outline mb-4">
-                    <label class="form-label" for="typeEmailX-2">Full Name </label>
-                    <input type="email" name="email"  id="typeEmailX-2"  class="form-control form-control-lg"/>
+                    <label class="form-label" for="typeNameX-2">Full Name </label>
+                    <input type="email" name="email"  id="typeNameX-2"  class="form-control form-control-lg"/>
              </div>
               <div class="form-outline mb-4">
                 <label class="form-label" for="typeEmailX-2">Email Address</label>
@@ -24,8 +24,8 @@
                 <input type="password" name="password"  id="typePasswordX-2" class="form-control form-control-lg" required/>
               </div>
               <div class="form-outline mb-4">
-                <label class="form-label" for="typePasswordX-2">Repeat Password</label>
-                <input type="password" name="password"  id="typePasswordX-2" class="form-control form-control-lg" required/>
+                <label class="form-label" for="typeConfirmPasswordX-2">Confirm Password</label>
+                <input type="password" name="password"  id="typeConfirmPasswordX-2" class="form-control form-control-lg" required/>
               </div>
   
               <button class="btn btn-outline-dark" routerLink="/" type="submit">Login</button>
