--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4605,6 +4605,7 @@
   @media (min-width: 576px) {
     .jumbotron {
       padding: 4rem 2rem;
+      width: auto;
     }
   }
   .jumbotron-fluid {
