--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -8,27 +8,45 @@
             <div class="card-body p-5 text-center">
   
               <h3 class="mb-5">Sign up</h3>
-              <form  name="myForm">
+              <form  #useForm="ngForm"  name="myForm" (ngSubmit)="onSubmit()">
               
              <div class="form-outline mb-4">
                     <label class="form-label" for="typeNameX-2">Full Name </label>
-                    <input type="email" name="email"  id="typeNameX-2"  class="form-control form-control-lg"/>
+                    <input type="text" 
+                    [(ngModel)]="signUpModel.name"
+                    #name="ngModel" 
+                    [class.is-invalid] = "name.invalid && name.touched"
+                    name="name"  id="typeNameX-2"  class="form-control form-control-lg" autocomplete="off" required/>
              </div>
-              <div class="form-outline mb-4">
-                <label class="form-label" for="typeEmailX-2">Email Address</label>
-                <input type="email" name="email"  id="typeEmailX-2"  class="form-control form-control-lg"/>
-              </div>
+             <div class="form-outline mb-4">
+              <label class="form-label" for="typeEmailX-2">Email</label>
+              <input type="email" name="email"
+               #email="ngModel" [class.is-invalid] = "email.invalid && email.touched"
+               id="typeEmailX-2" [(ngModel)]="signUpModel.email" email="true" class="form-control form-control-lg"
+               autocomplete="off"
+                required/>
+               <small [class.d-none]="email.valid || email.untouched" >Please enter valid email</small>
+            </div>
   
               <div class="form-outline mb-4">
-                <label class="form-label" for="typePasswordX-2">Password</label>
-                <input type="password" name="password"  id="typePasswordX-2" class="form-control form-control-lg" required/>
+                <label class="form-label"
+                 for="typePasswordX-2">Password</label>
+                <input type="password" 
+                [(ngModel)]="signUpModel.password"
+                #password="ngModel" 
+                [class.is-invalid] = "password.invalid && password.touched"
+                name="password"  id="typePasswordX-2" class="form-control form-control-lg" required autocomplete="off"/>
               </div>
               <div class="form-outline mb-4">
                 <label class="form-label" for="typeConfirmPasswordX-2">Confirm Password</label>
-                <input type="password" name="password"  id="typeConfirmPasswordX-2" class="form-control form-control-lg" required/>
+                <input type="password"
+                [(ngModel)]="signUpModel.confirmPassword"
+                #cpassword="ngModel" 
+                [class.is-invalid] = "cpassword.invalid && cpassword.touched"
+                 name="cpassword"  id="typeConfirmPasswordX-2" class="form-control form-control-lg" required autocomplete="off"/>
               </div>
   
-              <button class="btn btn-outline-dark" routerLink="/" type="submit">Login</button>
+              <button [disabled]="useForm.form.invalid" class="btn btn-outline-dark"  type="submit">Sign Up</button>
             </form>
             </div>
           </div>
